<resources>
    <string name="app_id_prev">411408895645231</string>
    <string name="app_id">636236326481262</string>
    <string name="url_bet">http://prode.br.pmovil.net/</string>
    <string name="banner_id">ca-app-pub-7993377819754702/2450371079</string>
    <string name="app_name">Futbol Ar</string>
    <string name="font_name_italic">segoeuiz.ttf</string>
    <string name="font_name">segoeui.ttf</string>
    <string name="font_name_bold">segoeuib.ttf</string>
    <string name="versionBuild">FUTBOL AR - v2.0 - build 603</string>
    <string name="GoogleAnalyticsAverage">AVERAGE</string>
    <string name="GoogleAnalyticsBattles">BATTLES</string>
    <string name="GoogleAnalyticsBets">BETS</string>
    <string name="GoogleAnalyticsCalendar">CALENDAR</string>
    <string name="GoogleAnalyticsRealTime">REAL TIME</string>
    <string name="GoogleAnalyticsNews">NEWS</string>
    <string name="GoogleAnalyticsNotifications">NOTIFICATIONS</string>
    <string name="GoogleAnalyticsPositions">POSITIONS</string>
    <string name="GoogleAnalyticsStrikers">STRIKERS</string>
    <string name="GoogleAnalyticsChangeTournament">CHANGE TOURNAMENT</string>
    <string name="GoogleAnalyticsTeams">TEAMS</string>
    <string name="GoogleAnalyticsMatchInTwitter">MATCH IN TWITTER</string>
    <string name="GoogleAnalyticsUpcoming">UPCOMING</string>
    <string name="GoogleAnalyticsVideos">VIDEOS</string>
    <string name="GoogleAnalyticsStatistics">STATISTICS</string>
    <string name="AcceptKey">Accept</string>
    <string name="action_settings">Setting</string>
    <string name="Biography">Biography</string>
    <string name="Cancel">Cancel</string>
    <string name="cancel_comment">Cancel</string>
    <string name="CancelKey">Cancel</string>
    <string name="Cards">Cards</string>
    <string name="CardsRedKey">Rojas</string>
    <string name="CardsYellowKey">Amarillas</string>
    <string name="championship_finished">TOURNAMENT FINISHED</string>
    <string name="change">CHANGE</string>
    <string name="Change">Change</string>
    <string name="change_tournament">CHANGE TOURNAMENT</string>
    <string name="CommentKey">Comment</string>
    <string name="commentKey_1">Kick-off</string>
    <string name="commentKey_10">Goal by ##teamName##. Goal against his team of ##playerName## </string>
    <string name="commentKey_11">Goal by ##teamName##. Goal with the head by ##playerName##</string>
    <string name="commentKey_12">Goal by ##teamName##. Foul by ##playerName## </string>
    <string name="commentKey_13">Goal by ##teamName##. Penalty by ##playerName## </string>
    <string name="commentKey_14">##type##</string>
    <string name="commentKey_15">##type##</string>
    <string name="commentKey_16">##type##</string>
    <string name="commentKey_17">End of first half</string>
    <string name="commentKey_18">Start of second half</string>
    <string name="commentKey_19">##type##</string>
    <string name="commentKey_2">End of match</string>
    <string name="commentKey_20">##type##</string>
    <string name="commentKey_21">##type##</string>
    <string name="commentKey_22">##type##</string>
    <string name="commentKey_23">##type##</string>
    <string name="commentKey_24">##type##</string>
    <string name="commentKey_25">##type##</string>
    <string name="commentKey_26">##type##</string>
    <string name="commentKey_27">##type##</string>
    <string name="commentKey_28">##playerName## hits the corner kick</string>
    <string name="commentKey_29">##playerName## shots out</string>
    <string name="commentKey_3">##playerName## of ##teamName## is adverted</string>
    <string name="commentKey_30">##playerName## shots out and it\'s corner kick</string>
    <string name="commentKey_31">Penalty for ##teamName## commited by ##playerName## on ##receivedName##</string>
    <string name="commentKey_32">Penalty assigned for a hand</string>
    <string name="commentKey_33">##playerName## shots out</string>
    <string name="commentKey_34">##playerName## kicks on the goalpost </string>
    <string name="commentKey_35">##playerName## kicks, but the ball is saved by ##catchedBy##</string>
    <string name="commentKey_36">##playerName## commits foul on ##receivedName##</string>
    <string name="commentKey_37">Hand by ##playerName##</string>
    <string name="commentKey_38">##type##</string>
    <string name="commentKey_39">##type##</string>
    <string name="commentKey_4">##playerName## of ##teamName## is adverted by the second time and is expeled</string>
    <string name="commentKey_40">##type##</string>
    <string name="commentKey_41">##type##</string>
    <string name="commentKey_42">##type##</string>
    <string name="commentKey_43">##playerName## shots the penalty, but the ball is defended by ##catchedBy##</string>
    <string name="commentKey_44">##playerName## shots the penalty out</string>
    <string name="commentKey_45">##playerName## shots the penalty on the goalpost</string>
    <string name="commentKey_46">##playerName## commits side ball for ##teamName##</string>
    <string name="commentKey_47">##playerName## is in offside position</string>
    <string name="commentKey_48">##playerName## shots goal kick</string>
    <string name="commentKey_49">End of the regular period</string>
    <string name="commentKey_5">##playerName## of ##teamName## is expeled by red card</string>
    <string name="commentKey_50">First half of extended period begins</string>
    <string name="commentKey_51">End of the first half of the extended period</string>
    <string name="commentKey_52">Second half of extended period begins</string>
    <string name="commentKey_53">End of the second half of the extended period</string>
    <string name="commentKey_54">The penalty sequence begins</string>
    <string name="commentKey_55">##playerName## commits his penalty for ##teamName##</string>
    <string name="commentKey_56">##playerName## hits his penalty, but it is defended by ##catchedBy##</string>
    <string name="commentKey_57">##playerName## hits his penalty</string>
    <string name="commentKey_7">Substituition of ##teamName##. ##knownOffName## goes out ##knownInName## goes in</string>
    <string name="commentKey_8">Suspended match</string>
    <string name="commentKey_9">Goal of ##teamName##. Goal is scored by ##playerName##</string>
    <string name="comments">COMMENTS</string>
    <string name="ConnectFacebookAccount">Facebook Login</string>
    <string name="Continue">CONTINUE</string>
    <string name="CornerKickKey">Corner Kick</string>
    <string name="English">English</string>
    <string name="ErrAPIUnknowKey">Unknown API error</string>
    <string name="ErrFacebookLogin">Failed post</string>
    <string name="ErrFacebookLoginFail">The operation couldn’t be completed</string>
    <string name="ErrImgSizeKey">Requested image size is invalid</string>
    <string name="ErrTwitter">Failed post</string>
    <string name="ErrTwitterAccounts">No Twitter account is registered. You can add or create a Twitter account in Settings</string>
    <string name="ErrTwitterDuplicated">Duplicated tweet</string>
    <string name="ErrTwitterLogin">Twitter has failed</string>
    <string name="ErrUnknown">Unknown error</string>
    <string name="FacebookSuccessKey">Has been successfully published</string>
    <string name="fan_of">YOUR TEAM IS</string>
    <string name="FCGenericErrorKey">An error has occurred, please try again later.</string>
    <string name="FoulGivenKey">Cometidos</string>
    <string name="FoulReceivedKey">Recibidos</string>
    <string name="FoulsKey">Fouls</string>
    <string name="GoalAttemptsKey">Goal attempts</string>
    <string name="GoalsFreeKey">Tiro libre</string>
    <string name="GoalsKey">Goals</string>
    <string name="GoalsPenaltyKey">Penal</string>
    <string name="GoalsPlayKey">Jugada</string>
    <string name="GoalsTotalsKey">Totales</string>
    <string name="HalfTimeKey_0">MS</string>
    <string name="HalfTimeKey_1">1H</string>
    <string name="HalfTimeKey_2">2H</string>
    <string name="HalfTimeKey_3">ET</string>
    <string name="HalfTimeKey_4">P</string>
    <string name="HalfTimeKey_5">P</string>
    <string name="header_championship">Tournament</string>
    <string name="Height">Height</string>
    <string name="language">LANGUAGE</string>
    <string name="language_english">English</string>
    <string name="language_portugues">  Português</string>
    <string name="language_spanish">Español</string>
    <string name="LoadingKey"></string>
    <string name="login">LOGIN</string>
    <string name="LoginFacebook">Login</string>
    <string name="logout">LOG OUT</string>
    <string name="Match">Match</string>
    <string name="mentions">mentions</string>
    <string name="Mentions_count">Mentions count</string>
    <string name="MenuOptAveragesKey">AVERAGE</string>
    <string name="MenuOptBattlesKey">BATTLES</string>
    <string name="MenuOptBetsKey">BETS</string>
    <string name="MenuOptFixtureKey">CALENDAR</string>
    <string name="MenuOptMediaKey">News and Videos</string>
    <string name="MenuOptMinByMinKey">REAL TIME</string>
    <string name="MenuOptNewsKey">NEWS</string>
    <string name="MenuOptNotificationKey">NOTIFICATIONS</string>
    <string name="MenuOptPositionsKey">POSITIONS</string>
    <string name="MenuOptScorersKey">STRIKERS</string>
    <string name="MenuOptSelectionKey">CHANGE TOURNAMENT</string>
    <string name="MenuOptSettingsKey">Settings</string>
    <string name="MenuOptStatistics2Key">STATISTICS</string>
    <string name="MenuOptStatisticsKey">SUMMARY</string>
    <string name="MenuOptTablesKey">POSITIONS</string>
    <string name="MenuOptTeamsKey">TEAMS</string>
    <string name="MenuOptTwitterMatchKey">MATCH IN TWITTER</string>
    <string name="MenuOptUpcomingMatchesKey">UPCOMING</string>
    <string name="MenuOptVideosKey">VIDEOS</string>
    <string name="MessageFavoriteNotificationKey">Would you like to update your favourite teams?</string>
    <string name="min">min</string>
    <string name="minutesAgo">%d minutes ago</string>
    <string name="Most_mentioned_players">Most mentioned players</string>
    <string name="NoCommentsMsgKey">No comments were found</string>
    <string name="NoConnectionInternetKey">The Internet connection appears to be offline.</string>
    <string name="NoDataKey">No data</string>
    <string name="NoNewsKey">No news</string>
    <string name="noSelectGame">No match has been selected</string>
    <string name="NotificationMenuOptFavoriteKey">Edit Favourites</string>
    <string name="NotificationMenuOptSettingKey">Notification Settings</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="NoVideosMsgKey">No videos were found</string>
    <string name="OffSideKey">Offsides</string>
    <string name="OKKey">OK</string>
    <string name="Portuguese">Português</string>
    <string name="Position">Position</string>
    <string name="RedCardKey">Red cards</string>
    <string name="RefreshKey">Refresh</string>
    <string name="RefreshKeyComments">Load more comments</string>
    <string name="RefreshKeyUpcoming">Load more matches</string>
    <string name="RefreshKeyVideos">Load more videos</string>
    <string name="Retry">Retry</string>
    <string name="select_another_championship">Selecccionar another tournament</string>
    <string name="select_other_team">Select another team</string>
    <string name="TableColumnFK">FK</string>
    <string name="TableColumnG">GF</string>
    <string name="TableColumnHG">HG</string>
    <string name="TableColumnPG">PG</string>
    <string name="TableColumnPlayer">PLAYER</string>
    <string name="TableColumnTOT">TOT</string>
    <string name="text_facebook_button">Login with Facebook</string>
    <string name="TournamentSelectionMessageKey">Select the tournament that you wish to follow.</string>
    <string name="Tv_text_comment">To comment you must login with your Facebook account</string>
</resources>