<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res/com.pmovil.soccer"
    android:id="@+id/container_button_simple"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_backgorud_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/button" />

    <com.components.TextViewPlus
        android:id="@+id/tv_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/header_championship"
        android:textColor="@color/color_button_championship"
        android:textColorHint="@color/color_button_championship"
        android:textSize="17sp"
        foo:customFont="@string/font_name_bold" />

</RelativeLayout>