<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res/com.pmovil.soccer"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="140dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:background="@drawable/etcomment_style">

    <com.components.TextViewPlus
        android:id="@+id/tv_text_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:textColor="@color/gray_last_item"
        android:text="@string/Tv_text_comment"
        foo:customFont="@string/font_name" />

    <RelativeLayout
        android:id="@+id/layout_facebook"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_text_comment">

            <ImageView
                android:clickable="true"
                android:id="@+id/iv_btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/boton_facebook" />

            <com.components.TextViewPlus
                android:id="@+id/tv_title_share"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_centerVertical="true"
                android:text="@string/text_facebook_button"
                android:textColor="@color/gray_strong"
                foo:customFont="@string/font_name" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_below="@+id/layout_facebook"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingTop="10dp"
        android:background="@color/gray_middle"/>

    <com.components.TextViewPlus
        android:id="@+id/tv_cancel_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view"
        android:text="@string/cancel_comment"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/gray_last_item"
        android:gravity="center"
        android:clickable="true"
        foo:customFont="@string/font_name"/>

</LinearLayout>