<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.pmovil.soccer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container_min_to_min_header_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:background="@color/gray_metegol"
        android:gravity="center_vertical">

        <RelativeLayout
            android:id="@+id/container_min_to_min_btn_share_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-30dp"
            android:paddingLeft="26dp"
            android:paddingRight="15dp">

            <com.components.TextViewPlus
                android:id="@+id/tv_btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="3dp"
                android:textColor="@color/gray_black_font"
                app:customFont="@string/font_name" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/container_incidence_min_by_min_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_icon_type_incidence_right"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name" />


            <com.components.TextViewPlus
                android:id="@+id/tv_min_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/gray_black_font"
                app:customFont="@string/font_name_bold" />


        </LinearLayout>
    </RelativeLayout>

</merge>