<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:foo="http://schemas.android.com/apk/res/com.pmovil.soccer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:background="@color/gray_item"
    android:id="@+id/layout_new_row">

    <com.components.TextViewPlus
        android:id="@+id/tv_title_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/iv_news"
        android:lineSpacingExtra="@dimen/spaceLine"
        android:maxLines="3"
        android:paddingBottom="3dp"
        android:text=""
        android:textColor="@color/green_blue"
        android:textColorHint="@color/green_blue"
        android:textSize="20sp"
        foo:customFont="@string/font_name_bold" />

    <com.components.TextViewPlus
        android:id="@+id/tv_desc_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title_news"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/iv_news"
        android:maxLines="4"
        android:text=""
        android:textColor="@color/black_numbers"
        android:textSize="13sp"
        foo:customFont="@string/font_name" />

    <ProgressBar
        android:id="@+id/progressBarNews"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp" />

    <ImageView
        android:id="@+id/iv_news"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="7dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

</RelativeLayout>