<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:foo="http://schemas.android.com/apk/res/com.pmovil.soccer"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CommentActivity">

    <include
        android:id="@+id/topbar"
        layout="@layout/actionbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/container_content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/container_banner"
        android:layout_below="@+id/topbar"
        android:background="@color/gray_metegol">

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></FrameLayout>

        <RelativeLayout
            android:id="@+id/container_preloader"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/background_title"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_preloader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_no_connection"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/background_title"
            android:visibility="gone">

            <com.components.TextViewPlus
                android:id="@+id/tv_noconnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/NoConnectionInternetKey"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="21sp"
                foo:customFont="@string/font_name" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black_transparent_dark">

        <com.google.android.gms.ads.AdView
            android:id="@+id/bannerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_id" />

    </RelativeLayout>

</RelativeLayout>
